# DiceComputation

./: CMakeLists.txt  README.md
DiceComputation/: CMakeLists.txt  qSlicerDiceComputationModule.cxx  qSlicerDiceComputationModule.h  qSlicerDiceComputationModuleWidget.cxx  qSlicerDiceComputationModuleWidget.h
DiceComputation/Logic/: vtkSlicerDiceComputationLogic.cxx  vtkSlicerDiceComputationLogic.h
DiceComputation/Resources/: qSlicerDiceComputationModule.qrc
DiceComputation/Resources/UI/: qSlicerDiceComputationLabelMapSelectorWidget.ui  qSlicerDiceComputationModuleWidget.ui
DiceComputation/Widgets/: CMakeLists.txt  qSlicerDiceComputationLabelMapSelectorWidget.cxx  qSlicerDiceComputationLabelMapSelectorWidget.h
